--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,18 +6,24 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    needs: test
     steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v4
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
         with:
-          node-version: 18
-
-      - run: npm install
-      - run: npm run build
-
+          node-version: "20"
+      - name: Install dependencies
+        run: npm install
+      - name: Run build
+        run: npm run build
       - run: npm test
+      - name: Archive Production Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist
+          path: dist
 
   deploy:
     runs-on: ubuntu-latest
