--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,24 @@
-name: react-TypeScipt-build
-
-on:
-  push:
-
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "20"
+      - run: npm install
+      - run: npm test
+
   build:
     runs-on: ubuntu-latest
     needs: test
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
         with:
           node-version: "20"
-      - name: Install dependencies
-        run: npm install
-      - name: Run build
-        run: npm run build
-      - run: npm test
+      - run: npm install
+      - run: npm run build
       - name: Archive Production Artifact
         uses: actions/upload-artifact@v4
         with:
